# deepin-ai-daemon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.zh_CN.md
.reuse/: dep5
assets/autostart/: deepin-ai-daemon.desktop  deepin-ai-daemon.service  org.deepin.ai.daemon.AnalyzeServer.service  org.deepin.ai.daemon.VectorIndex.service  org.deepin.ai.daemon.service
assets/dbus/: org.deepin.ai.daemon.AnalyzeServer.xml  org.deepin.ai.daemon.VectorIndex.xml
debian/: changelog  control  copyright
rag_test/ragPy/: beir_evaluate.py  docProcess.py  evaluate_ipynb.py  loadDocuments.py  run_llm.py  test.py  utils.py
src/: CMakeLists.txt  main.cpp
src/config/: configmanager.cpp  configmanager.h
src/config/private/: configmanager_p.h
src/database/: embeddatabase.cpp  embeddatabase.h
src/index/: embeddingworker.cpp  embeddingworker.h  global_define.h  indexmanager.cpp  indexmanager.h  indexworker.cpp  indexworker.h
src/index/private/: embeddingworker_p.h  indexworker_p.h
src/index/vectorindex/: embedding.cpp  embedding.h  vectorindex.cpp  vectorindex.h
src/modelhub/: modelhubwrapper.cpp  modelhubwrapper.h
src/monitor/: filemonitor.cpp  filemonitor.h  vfsgenl.h
src/parser/: abstractpropertyparser.cpp  abstractpropertyparser.h  audiopropertyparser.cpp  audiopropertyparser.h  imagepropertyparser.cpp  imagepropertyparser.h  videopropertyparser.cpp  videopropertyparser.h
src/server/: analyzeserver.cpp  analyzeserver.h  analyzeserverdbus.cpp  analyzeserverdbus.h  vectorindexdbus.cpp  vectorindexdbus.h
src/utils/: resourcemanager.cpp  resourcemanager.h  utils.cpp  utils.h
